# QtPlayer

./: .gitignore  CMakeLists.txt  Main.qml  Reader.h  Readme.md  ffvideoreader.cpp  ffvideoreader.h  main.cpp  resources.qrc  rhitextureitem.cpp  rhitextureitem.h  vcpkg.json
Assets/: buffer.tiff
Shaders/: color.frag  color.vert  frame.frag  frame.vert
demux/: README.md  demuxer.cpp  demuxer.h  example.cpp  stream.cpp  stream.h
